feat: "about" decorators has been added